# Sutra

./: !browserTest.bat  !editor.bat  !playground.bat  .dockerignore  .gitattributes  .gitignore  .gitmodules  .mailmap  AGENTS.md  Audit.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVLOG.md  Dockerfile  FINDINGS.md  FV-LEAN-HANDOFF-2026-06-29.md  GraphDB vs Neo4j licensing comparison - Claude.html  Here is a discussion of the Sutra progra.md  Neural network approaches to Turing completeness - Claude.html  README.md  REPO-INVENTORY.md  S2-language-comparisons.md  S2-syntax-decisions.md  STATUS.md  _commitmsg.txt  akasha-demo-program.ak  akasha-language-comparisons.md  akasha-syntax-decisions.md  allocation.yaml  analyze_collisions.py  audit.md  browse.py  claudes confession.md  claw4s-scope.md  combinatorics_results.json  combinatorics_summary.md  competition_analysis_raw.json  compile_to_cuda.py  crashed_session_2026-05-20.md  (+30 more)
iso/rust/: Cargo.toml
iso/rust/src/: lib.rs  main.rs
iso/rust/tests/: equiv.rs
sdk/sutra-compiler/: README.md  pyproject.toml
sdk/sutra-compiler/sutra_compiler/: __init__.py  __main__.py  ast_nodes.py  cached_compile.py  codegen.py  codegen_base.py  codegen_flybrain.py  codegen_numpy.py  codegen_pytorch.py  codegen_thrml.py  embedding.py  fv.py  fv_key_soundness.py  fv_loop_convergence.py  fv_obligation_checker.py  fv_poly_bound.py  fv_sampler_convergence.py  inliner.py  lexer.py  loop_capture.py  loop_desugar.py  multi_process.py  parser.py  preeval.py  promise_desugar.py  repl.py  review.py  runtime_numpy.py  simplify.py  simplify_egglog.py  solution.py  stdlib_loader.py  sutradb_embedded.py  symbol_table.py  tabulate.py  trace.py  validator.py  workspace.py
sdk/sutra-compiler/sutra_compiler/stdlib/: README.md  axons.su  bigint.su  bitwise.su  embed.su  javascript_object.su  logic.su  math.su  memory.su  modulus.su  numbers.su  promises.su  rotation.su  similarity.su  strings.su  tensor.su  vectors.su
sdk/sutra-compiler/tests/: conftest.py  test_arity_diagnostic.py  test_arrow_functions.py  test_await_midfunction.py  test_axon_build.py  test_axon_item_call_result.py  test_axon_keys.py  test_axon_project.py  test_branchless_loop.py  test_buffer_transcendentals.py  test_cached_compile.py  test_cast_codegen.py  test_class_fields_runtime.py  test_codegen.py  test_codegen_flybrain.py  test_codegen_numpy.py  test_codegen_pytorch.py  test_codegen_thrml.py  test_corpus.py  test_dimension_audit.py  test_dimension_audit_warning.py  test_embedding_provider.py  test_equality_autograd.py  test_fused_nn.py  test_fv_general_checker.py  test_fv_key_soundness.py  test_fv_kleene_grid_exactness.py  test_fv_loop_convergence.py  test_fv_poly_obligation_checker.py  test_fv_sampler_convergence.py  test_fv_termination.py  test_fv_worked_example.py  test_higher_order_functions.py  test_host_leak_builtins.py  test_implicit_loop_desugar.py  test_inliner.py  test_int_dict.py  test_int_to_string.py  test_interp_string_codegen.py  test_jvm_core.py  (+51 more)
sdk/sutra-compiler/tests/corpus/invalid/: 22_capturing_arrow_escape.su
sdk/sutra-compiler/tests/corpus/valid/: 01_primitive_declarations.su  02_functions.su  03_methods.ak  04_operators.ak  05_generics.ak  06_control_flow.ak  06_control_flow.su  07_casts.su  08_string_interpolation.su  09_top_level_execution.su  10_try_catch.ak  12_method_chains.ak  13_arithmetic.su  14_arrow_functions.su  15_fly_brain_style.ak  15_fly_brain_style.su  18_nested_blocks.ak  18_nested_blocks.su  19_booleans_and_literals.su  20_kitchen_sink.su  21_class_with_methods.su  22_array_literal.ak  22_class_with_fields.su  23_subscript_access.su  24_map_literal.su  25_char_literal.su  25_list_ops.su  26_fuzzy_literal.su  27_string_auto_embed.su  28_trit_literal.su  29_unknown_literal.su  30_imaginary_literal.su  32_logical_operators.su  33_equality_operator.su  34_defuzzify.su  35_derived_logic.su  37_comparison_operators.su  async_promise_basic.su  async_promise_desugar.su  async_promise_runtime.su  (+15 more)
sdk/sutra-from-c/: DESIGN.md  README.md  pyproject.toml
sdk/sutra-from-c/sutra_from_c/: __init__.py  __main__.py
sdk/sutra-from-c/tests/fixtures/loop_sum/: expected.su  input.c
sdk/sutra-from-c/tests/fixtures/struct_pass/: expected.su  input.c
sdk/sutra-from-elixir/: README.md  pyproject.toml
sdk/sutra-from-elixir/sutra_from_elixir/: __init__.py  lower.py
sdk/sutra-from-elixir/tests/: test_lower_fixtures.py
sdk/sutra-from-elixir/tests/fixtures/add_main/: input.ex
sdk/sutra-from-elixir/tests/fixtures/bool_case/: input.ex
sdk/sutra-from-elixir/tests/fixtures/case_bind/: input.ex
sdk/sutra-from-elixir/tests/fixtures/case_literal/: input.ex
sdk/sutra-from-elixir/tests/fixtures/guard_clause/: input.ex
sdk/sutra-from-elixir/tests/fixtures/guarded_fact/: input.ex
sdk/sutra-from-elixir/tests/fixtures/guarded_multibase/: input.ex
sdk/sutra-from-elixir/tests/fixtures/guarded_rec_clause/: input.ex
sdk/sutra-from-elixir/tests/fixtures/if_classify/: input.ex
sdk/sutra-from-elixir/tests/fixtures/map_axon/: input.ex
sdk/sutra-from-elixir/tests/fixtures/map_param/: input.ex
sdk/sutra-from-elixir/tests/fixtures/match_bind_body/: input.ex
sdk/sutra-from-ocaml/: README.md  pyproject.toml
sdk/sutra-from-ocaml/sutra_from_ocaml/: __init__.py  __main__.py  lower.py
sdk/sutra-from-ocaml/tests/: test_lower_fixtures.py
sdk/sutra-from-rust/: README.md  pyproject.toml
sdk/sutra-from-rust/sutra_from_rust/: __init__.py  lower.py
sdk/sutra-from-rust/tests/: test_lower_fixtures.py
sdk/sutra-from-scala/: README.md  pyproject.toml
sdk/sutra-from-scala/sutra_from_scala/: __init__.py  lower.py
sdk/sutra-from-scala/tests/: test_lower_fixtures.py
sdk/sutra-from-ts/: DESIGN.md  README.md  pyproject.toml
sdk/sutra-from-ts/examples/: abs.su  abs.ts  add.su  add.ts  greet.su  greet.ts  untyped_double.js  untyped_double.su
sdk/sutra-from-ts/sutra_from_ts/: __init__.py  __main__.py  lower.py
sdk/sutra-from-ts/tests/: test_cli_smoke.py  test_lower_fixtures.py
sutraDB/sdks/rust/: Cargo.toml  README.md
(+2676 files in other folders)
