[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sutra-from-ocaml"
version = "0.1.0"
description = "Transpile a functional core of OCaml into Sutra (.su) source."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Emma Leonhart" },
]
keywords = ["transpiler", "ocaml", "functional", "sutra", "compiler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "tree-sitter>=0.21",
  "tree-sitter-ocaml>=0.23",
  "sutra-dev>=0.2.0",
]

[project.scripts]
ocaml2su = "sutra_from_ocaml.__main__:main"

[project.urls]
Homepage = "https://sutra.yantraos.org"
Repository = "https://github.com/EmmaLeonhart/Sutra"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sutra_from_ocaml*"]
