[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sutra-from-rust"
version = "0.1.0"
description = "Transpile an expression-oriented core of Rust into Sutra (.su) source."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Emma Leonhart" },
]
keywords = ["transpiler", "rust", "sutra", "compiler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "tree-sitter>=0.21",
  "tree-sitter-rust>=0.21",
]

[project.urls]
Homepage = "https://sutra.yantraos.org"
Repository = "https://github.com/EmmaLeonhart/Sutra"

[tool.setuptools.packages.find]
include = ["sutra_from_rust*"]
