[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sutra-from-scala"
version = "0.1.0"
description = "Transpile a functional core of Scala into Sutra (.su) source."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
  { name = "Emma Leonhart" },
]
keywords = ["transpiler", "scala", "functional", "sutra", "compiler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "tree-sitter>=0.21",
  "tree-sitter-scala>=0.20",
]

[project.urls]
Homepage = "https://sutra.noldor.tech"
Repository = "https://github.com/EmmaLeonhart/Sutra"

[tool.setuptools.packages.find]
include = ["sutra_from_scala*"]
