[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sutra-from-ts"
version = "0.0.1"
description = "Transpile a typed core of TypeScript (and JavaScript-as-untyped-TS) into Sutra (.su) source."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Emma Leonhart" },
]
keywords = ["transpiler", "typescript", "javascript", "sutra", "compiler"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "tree-sitter>=0.21",
  "tree-sitter-typescript>=0.21",
  "sutra-dev>=0.2.0",
]

[project.scripts]
ts2su = "sutra_from_ts.__main__:main"

[project.urls]
Homepage = "https://sutralang.dev"
Repository = "https://github.com/EmmaLeonhart/Sutra"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sutra_from_ts*"]
