[package]
name = "sutradb"
version = "0.1.0"
edition = "2021"
description = "Rust client for SutraDB — RDF-star triplestore with native vector indexing"
license = "AGPL-3.0-only"
repository = "https://github.com/EmmaLeonhart/SutraDB"
keywords = ["sutradb", "rdf", "sparql", "vector", "graph-database"]
categories = ["database", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
